# ngs_topopt

./: CMakeLists.txt  LICENSE
examples/timestepping/: beam.py  heat.py  sinks.py  wave.py
src/: CMakeLists.txt  __init__.py  elasticity.py  functions.py  log.py  optimizer.py  problem.py  sensitivity.py  utils.py
tests/: CMakeLists.txt  test_beam.py  test_heat.py  test_wave.py
